# libvm

./: CMakeLists.txt  README.md  README.txt  build.sh
include/: ippdefs.h  vm.h  vm_debug.h  vm_event.h  vm_file.h  vm_mmap.h  vm_mutex.h  vm_semaphore.h  vm_shared_object.h  vm_socket.h  vm_strings.h  vm_sys_info.h  vm_thread.h  vm_time.h  vm_types.h
include/sys/: vm_file_unix.h  vm_file_win32.h  vm_types_linux32.h  vm_types_win32.h
src/: vm_debug_linux32.c  vm_debug_win32.c  vm_event_linux32.c  vm_event_win32.c  vm_file.c  vm_file_unix.c  vm_file_win32.c  vm_mmap_linux32.c  vm_mmap_win32.c  vm_mutex_linux32.c  vm_mutex_win32.c  vm_semaphore_linux32.c  vm_semaphore_win32.c  vm_shared_object_linux32.c  vm_shared_object_win32.c  vm_socket_linux32.c  vm_socket_win32.c  vm_sys_info_linux32.c  vm_sys_info_win32.c  vm_thread_linux32.c  vm_thread_win32.c  vm_time_linux32.c  vm_time_win32.c
test/: test-sys_info.c
